# Lekgotla

./: .gitignore  AGENTS.md  README.md  index.html  pyproject.toml  script.js  server.py  style.css  test_bdd_compiler.py  test_server.py
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  compiler.py  main.py
backend/tests/: __init__.py  test_bdd_compiler.py  test_server.py
backend/tests/features/: compiler.feature
frontend/: index.html  script.js  style.css
