[project]
name = "lekgotla"
version = "0.1.0"
description = "Context compiler for AI agent configuration"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0",
  "aio-pika>=9.5.0",
  "argon2-cffi>=23.1.0",
  "authlib>=1.4.0",
  "cryptography>=44.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai>=1.0.0",
  "opentelemetry-api>=1.30.0",
  "pydantic-settings>=2.7.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pip-audit>=2.8.0",
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "pytest-bdd>=7.3.0",
  "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["."]
exclude = [".venv", "__pycache__"]
